<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewCitizen</string>
    <integer name ="card_flip_time_full"> 800 </integer>
    <integer name ="card_flip_time_half"> 400 </integer>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string-array name="navigation_array">
        <item>XML-Datei einlesen </item>
        <item>SQL Einträge in der Konsole einzeigen</item>
        <item>Alle Daten löschen</item>
        <item>Persönliche Informationen</item> 
        <item>Spracheinstellungen </item>  
        <item>Syoncrhonisierung</item> 
        <item>Einstellungen</item>    
    </string-array>
    <string-array name="priority">
        <item>very low</item>
        <item>low</item>
        <item>normal</item>
        <item>high</item>
        <item>very high</item>        
    </string-array>
    <string-array name="category">
        <item>Administration</item>
        <item>Arbeit</item>
        <item>Freizeit</item>
        <item>Rest</item>        
    </string-array>
    <string name="todotitle">title</string>
    <string name="Trennstrich">" - "</string>
    <string name="text_view_placeholder">"-------"</string>
    <string name="deadline">Deadline:</string>
    <string name="done_checkbox">done</string>
    <string name="fragment_todo_list_title">Übersicht</string>
    <string name="deadline_">Deadline:</string>
    <string name="backtoselect">Zurück</string>
    <string name="priorityLabel">Priorität</string>
    <string name="remarkslabel">Bemerkungen:</string>
    <string name="dokumentslabel">Dokumente:</string>
    <string name="adresselable">Adresse:</string>
    <string name="adjust">Bearbeiten</string>
    <string name="save">Änderungen speichern</string>
    <string name="start_navigation">Navigation starten</string>
    <string name="kategorieview">Kategorie:</string>
    <string name="kategorielable">Kategorie:</string>
    <string name="nachplzsort">PLZ</string>
    <string name="todo">TODO</string>
    <string name="sortierenbylabel">sortieren nach:</string>
    <string name="prioritbutton">Priorität</string>
    
 
    

</resources>
