<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/header_gradient"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:src="@drawable/logo" 
            android:contentDescription="@string/todo"/>

    </LinearLayout>
    
      <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat"
            android:orientation="vertical" >

		</LinearLayout>

    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sortbuttons"
        android:layout_below="@id/header"
        android:orientation="vertical" >

        <!-- The main content view -->

        <FrameLayout
            android:id="@+id/content_frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </FrameLayout>

        <!-- The navigation drawer -->

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#111"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />
        <!-- The Todos drawer -->

        <ListView
            android:id="@+id/right_drawer"
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:background="#fff"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />

        

    </android.support.v4.widget.DrawerLayout>

    <LinearLayout
        android:id="@+id/sortbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/sortLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:paddingRight="5dp"
            android:text="@string/sortierenbylabel"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sortbyareaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_weight="0.25"
            android:background="@layout/boarder"
            android:paddingRight="10dp"
            android:text="@string/nachplzsort" />

        <Button
            android:id="@+id/sortbyprioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@layout/boarder"
            android:paddingRight="10dp"
            android:text="@string/prioritbutton" />

        <Button
            android:id="@+id/sortbydeadlineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@layout/boarder"
            android:paddingRight="10dp"
            android:text="Deadline" />
    </LinearLayout>

</RelativeLayout>